# Zero-Trust-API-Authentication

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: .copilot-instructions.md
docs/: 240202002_240202015_XayDungProxymTLSKetHopToken‑basedSignaturesChoMoiTruongAPI&Cloud.docx  Propose2.md  Propose4.md  proposal.docx  propose4-v2.md  propose5.md
docs/diagram/: Propose2_AWS_Architecture_Mermaid.md  Propose2_Authentication_Flow.md  Propose2_Threat_Model.md
scripts/: api_tests.rest  upload-secrets.ps1
src/: .gitignore  README.md  apisix.yml  dbs.yml  docker-compose.yml  keycloak.yml  openssl-ca-ext.cnf  openssl-client.cnf  rotator.yml  server-ext.cnf  services.yml  step-ca.yml
src/apisix/: apisix.yaml  config.yaml  dashboard-conf.yaml  init_routes.py  init_ssl.py
src/cert-rotator/: Dockerfile  rotate.sh
src/cert_agent/: .env.example  ENV.md  config.py  crypto_utils.py  main.py
src/certs/: gen_certs.sh
src/keycloak/: realm-config.json  setup_authz.py
src/proxy/: main.py
src/restart-service/: restart-services.sh
terraform/: .gitignore  .terraform.lock.hcl  NT2205-CH191-api-key.pem  alb.tf  bastion.tf  ec2.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  security_groups.tf  tfplan  tls.tf  variables.tf
tests/: __init__.py  conftest.py  constants.py  test_aaa_validation.py  test_accounting.py  test_auth.py  test_auth_flow.py  test_authorization.py  test_cert_agent_integration.py  test_cert_rotation.py  test_gateway_integration.py  test_mtls_in_private_zone.py  test_threat_protection.py
(+50 files in other folders)
